--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,6 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  background-color: #b6ccda;
   font-family: Arial, Helvetica, sans-serif;
 }
